fix logo slider gap and feature hero padding

--- a/assets/scss/layout/cta/_cta.scss
+++ b/assets/scss/layout/cta/_cta.scss
@@ -23,7 +23,7 @@
             z-index: 2;
             max-width: 620px;
             text-align: center;
-            margin-top: 20px;
+            margin-top: -4px;
             line-height: 1.5;  
             max-width: 470px;
         }
